assets/css/style.css
body {
  font-family: Verdana, Geneva, Tahoma, sans-serif;
  background-color: rgb(142, 183, 219);
}

#gears {
  width: 100%;
  height: 250px;
  object-fit: cover;
}

.header {
  display: flex;
  justify-content: space-between;
  color: white;
  background-color: rgb(92, 8, 8);
  height: 110px;
}

.header h1::after {
  font-size: 50%;
  content: "@Gatsbeau";
  display: flex;
}

a:link {
  color: white;
}

a:visited {
  color: rgb(192, 183, 183);
}

a:hover {
  font-weight: bold;
}

A:active {
  font-style: oblique;
}

.navbar {
  width: 40%;
  font-size: 25px;
  font-weight: 500;
}

.navbar ul {
  display: flex;
  justify-content: space-evenly;
}

.header h1 {
  font-size: 200%;
  padding: 10px;
  margin: 10px;
  font-weight: bolder;
}

.navbar ul li {
  margin: 50px 10px 10px 10px;
}

.card {
  margin-bottom: 50px;
}

.listpt {
  font-size: 40px;
  margin: 20px;
  padding: 20px;
  background-color: whitesmoke;
  width: max-content;
  border-style: solid inset inset solid;
  border-width: 5px;
  border-color: teal;
  box-shadow: 10px 5px 5px gray;
}

.card p {
  margin-left: 60px;
  font-size: 150%;
  display: flex;
}

.library {
  margin-left: 50px;
  margin-top: 30px;
  width:1200px;
  display: flex;
}

.library img {
  border: solid;
  flex-grow: 0 0 auto;
}

#first {
  align-self: flex-start;
}

.nonfirst {
  height: 225px;
}

.contactinfo li {
  /* background-color: aqua; */
  margin: 25px 45px;
  font-size: 200%;
  font-weight: bold;
  width: 30%;
  list-style: circle;
}

#greeting {
  font-size: 200%;
  position: relative;
  right: 25px;
  font-weight: bold;
  font-style: oblique;
}

